<resources>
    <string name="app_name">DigitalOcean</string>

    <!-- //FIXME: @championswimmer
    This is my own token, with read access, now for testing-->
    <string name="do_test_token">5d16bdb68f365472f815159495577e5c2f01590afbd641fdfedc61144eb04ccc</string>

    <string name="do_client_id">3238aae5b35c99c31f6882b3c18f4c23b40c98b96f2b5c7ffae14dfadaf3166f</string>
    <string name="do_client_secret">1a92c568c2a55390f12f89534e945f322e0cd9d5a1c392aa4b678d429d1d736c</string>
    <string name="do_callback_url">http://championswimmer.in/callbackdo</string>

    <string name="empty"> </string>

    <string name="edit_droplet_name">Edit Droplet Name</string>
    <string name="delete_droplet">Delete Droplet</string>
    <string name="switch_off_droplet">Switch Off Droplet</string>
    <string name="power_off_droplet">Power Off Droplet</string>
    <string name="power_on_droplet">Power On Droplet</string>

    <string name="title_activity_droplet">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ip_address">IP Address</string>

    <string name="droplet_name">Droplet Name</string>
    <string name="droplet_memory">%1$s MB</string>
    <string name="droplet_disk_size">%1$s GB Disk</string>
    <string name="droplet_region">Region</string>
    <string name="droplet_os">Ubuntu</string>
    <string name="resize_droplet">Resize</string>

    <string name="hint_snapshot_name">Snapshot Name</string>
    <string name="take_snapshot">Snapshot</string>

    <string name="switch_ipv6">IPv6</string>
    <string name="switch_private_network">Private Network</string>
    <string name="switch_backup">Backup</string>

    <string name="ipv6_enabled">IPv6 enabled</string>
    <string name="ipv6_disabled">IPv6 disabled</string>
    <string name="backup_enabled">Backup enabled</string>
    <string name="backup_disabled">Backup disabled</string>
    <string name="private_network_enabled">Private network enabled</string>
    <string name="private_network_disabled">Private network disabled</string>
    <string name="network_error">Network error! Please check your internet connection</string>
    <string name="ipv6_cannot_be_disabled">IPv6 cannot be disabled</string>
    <string name="private_network_cannot_be_disabled">Private network cannot be disabled</string>

    <string name="title_activity_droplet_create">Create New Droplet</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="next">Next</string>
    <string name="back">Back</string>

    <string name="monthly_price">$ %1$s/mo</string>
    <string name="hourly_price">$ %1$s/hour</string>
    <string name="memory">%1$sMB/ %2$sCPU</string>
    <string name="disk_space">%1$sGB SSD disk</string>
    <string name="transfer">%1$sGB transfer</string>

    <string name="rename_droplet">Rename Droplet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country_name">India</string>
    <string name="droplet_specs">Ubuntu-512mb-blr1-01</string>
    <string name="droplet_RAM">512 MB</string>
    <string name="forward_slash">/</string>
    <string name="image_distribution">TEST</string>
    <string name="x86_arch">x86</string>
    <string name="droplet_HDD">20 GB Disk</string>
    <string name="colon">:</string>
    <string name="static_ip_address">192.168.1.1</string>
    <string name="static_droplet_name">Ubuntu-512mb-blr1-01</string>
    <string name="static_droplet_region">Bangalore</string>
    <string name="static_email_account">android.studio@android.com</string>
    <string name="login">Login</string>
    <string name="get_started">Get Started</string>

    <string name="dialog_delete_droplet_msg">Are you sure you would like to delete %s? This is irreversible. We will destroy your Droplet and all associated backups. All Droplet data will be scrubbed and irretrievable.</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="delete_droplet_msg">Deleting Droplet</string>
    <string name="ipv6_couldnt_be_enabled">IPv6 could not be enabled</string>
    <string name="private_network_couldnt_be_enabled">Private network could not be enabled</string>
    <string name="backup_couldnt_be_enabled">Backup could not be enabled</string>
    <string name="backup_couldnt_be_disabled">Backup could not be disabled</string>

    <string name="please_choose_option">Please choose an option</string>

    <string name="support_development">Support Development</string>
    <string name="github">GitHub</string>
    <string name="github_summary">Fork the repo and push changes or submit new issues.</string>
    <string name="contributors">Contributors</string>
    <string name="contributor1_name">Arnav Gupta</string>
    <string name="contributor1_username">championswimmer</string>
    <string name="contributor2_name">Harshit Dwidedi</string>
    <string name="contributor2_username">the-dagger</string>
    <string name="contributor3_name">Rishabh Khanna</string>
    <string name="contributor3_username">Rishabhk07</string>
    <string name="contributor4_name">Ojasva Jain</string>
    <string name="contributor4_username">ojasvajain</string>
    <string name="contributor5_name">Neeraj Jha</string>
    <string name="contributor5_username">Jonsnow21</string>
    <string name="see_all_contributors">See all contributors</string>

    <string name="signup_url">https://cloud.digitalocean.com/registrations/new</string>
    <string name="token">token</string>
    <string name="checking_token">Validating token…</string>
    <string name="this_token_is_invalid">This token is invalid</string>
    <string name="create_snapshot">Create Snapshot</string>
    <string name="advanced">Advanced</string>
    <string name="choose_a_distribution">Linux Distribution</string>
    <string name="distribution_size">Distribution Size</string>
    <string name="datacenter_region">DataCenter Region</string>
    <string name="droplet_info">Droplet Info</string>
    <string name="enable_ipv6_support">IPv6 support</string>
    <string name="private_networking">Private Networking</string>
    <string name="backups">Backups</string>
    <string name="give_a_name">Give a name</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="domains">Domains</string>
    <string name="certificates">Certificates</string>
    <string name="settings">Settings</string>
    <string name="additional_options">Additional Options</string>
    <string name="emptyViewPlaceholder">You new droplet is just at a tap away. Click on (+) to get started.</string>
    <string name="submit">Submit</string>
    <string name="data_unavailable">Data unavailable</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="more">More</string>
    <string name="share">Share</string>
    <string name="about">About</string>

</resources>
